--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -77,61 +77,6 @@ Resources:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: PVWA/PVWARegistrationLog
     DeletionPolicy: Retain
-  PVWAAmi:
-    Type: Custom::FindAMI
-    Condition: PVWACustomImageEmpty
-    Properties:
-      ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "14.4"
-      Component: "PVWA"
-      OS: !Ref WinVersion
-      OwnerAccountId: !Ref CyberarkAccountId
-    DependsOn:
-      - LambdaDeployRole
-  CPMAmi:
-    Type: Custom::FindAMI
-    Condition: CPMCustomImageEmpty
-    Properties:
-      ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "14.4"
-      Component: "CPM"
-      OS: !Ref WinVersion
-      OwnerAccountId: !Ref CyberarkAccountId
-    DependsOn:
-      - LambdaDeployRole
-  PSMAmi:
-    Type: Custom::FindAMI
-    Condition: PSMCustomImageEmpty
-    Properties:
-      ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "14.4"
-      Component: "PSM"
-      OS: !Ref WinVersion
-      OwnerAccountId: !Ref CyberarkAccountId
-    DependsOn:
-      - LambdaDeployRole
-  PSMPAmi:
-    Type: Custom::FindAMI
-    Condition: PSMPCustomImageEmpty
-    Properties:
-      ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "14.4"
-      Component: "PSMP"
-      OS: "RHEL-9"
-      OwnerAccountId: !Ref CyberarkAccountId
-    DependsOn:
-      - LambdaDeployRole
-  PTAAmi:
-    Type: Custom::FindAMI
-    Condition: PTACustomImageEmpty
-    Properties:
-      ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "14.4"
-      Component: "PTA"
-      OS: "RHEL-9"
-      OwnerAccountId: !Ref CyberarkAccountId
-    DependsOn:
-      - LambdaDeployRole
   StoreAdminPassword:
     Type: AWS::CloudFormation::CustomResource
     Properties:
@@ -211,13 +156,6 @@ Resources:
                 Resource:
                   - !Sub >-
                     arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/*
-        - PolicyName: DescribeImages
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action: 'ec2:DescribeImages'
-                Resource: "*"
   ComponentInstancesRole:
     Type: AWS::IAM::Role
     Properties:
@@ -310,57 +248,6 @@ Resources:
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
-  GetLatestAMILambda:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        ZipFile: |
-          import boto3
-          import cfnresponse
-          import json
-          import traceback
-
-
-          def handler(event, context):
-            try:
-              component = event['ResourceProperties']['Component']
-              pas_ver= event['ResourceProperties']['Version']
-              pas_ver_major= int(pas_ver.split(".")[0])
-              pas_ver_minor= int(pas_ver.split(".")[1])
-              response = {
-                  "Images": []
-              }
-
-              pas_ver_without_os_filter = ['11.5','11.6','11.7','12.0','12.1','12.2']
-              os_filter = '' if pas_ver in pas_ver_without_os_filter else \
-              event['ResourceProperties']['OS']
-              
-              while (response['Images'] == []) and (pas_ver_major >= 0):
-                while (response['Images'] == []) and (pas_ver_minor >= 0):
-                  ami_name = 'CyberArk PAM ' + component + ' v'+str(pas_ver_major) + '.' + str(pas_ver_minor) +'*'+ os_filter
-                  response = boto3.client('ec2').describe_images(
-                      Owners= [event['ResourceProperties']['OwnerAccountId']],
-                      Filters=[
-                        {'Name': 'name', 'Values':  [ami_name]},
-                      ],
-                  )
-                  pas_ver_minor -= 1
-                pas_ver_major -= 1
-                pas_ver_minor = 9
-              amis = sorted(response['Images'],
-                            key=lambda x: x['CreationDate'],
-                            reverse=True)
-              id = amis[0]['ImageId']
-              cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, id)
-            except IndexError:
-              cfnresponse.send(event, context, cfnresponse.FAIL, {}, "Requested AMI not found")
-            except:
-              traceback.print_last()
-              cfnresponse.send(event, context, cfnresponse.FAIL, {}, "An error occured, please refer to the last exception")
-      Runtime: python3.11
-      Handler: index.handler
-      Timeout: 60
-      Role: !GetAtt LambdaDeployRole.Arn
   PVWAMachine:
     Type: AWS::EC2::Instance
     Properties:
@@ -369,11 +256,7 @@ Resources:
           Value: !Ref ComponentInstanceName
       SecurityGroupIds: !Ref ComponentInstanceSecurityGroups
       SubnetId: !Ref ComponentInstanceSubnetId
-      ImageId: 
-        Fn::If:
-          - CustomImageEmpty
-          - !Ref PVWAAmi
-          - !Ref ComponentCustomAmi
+      ImageId: !Ref ComponentAmi
       InstanceType: !Ref ComponentInstanceType
       UserData:
         Fn::Base64: !Sub
@@ -412,11 +295,7 @@ Resources:
           Value: !Ref ComponentInstanceName
       SecurityGroupIds: !Ref ComponentInstanceSecurityGroups
       SubnetId: !Ref ComponentInstanceSubnetId
-      ImageId: 
-        Fn::If:
-          - CustomImageEmpty
-          - !Ref CPMAmi
-          - !Ref ComponentCustomAmi
+      ImageId: !Ref ComponentAmi
       InstanceType: !Ref ComponentInstanceType
       UserData:
         Fn::Base64: !Sub
@@ -456,11 +335,7 @@ Resources:
           Value: !Ref ComponentInstanceName
       SecurityGroupIds: !Ref ComponentInstanceSecurityGroups
       SubnetId: !Ref ComponentInstanceSubnetId
-      ImageId: 
-        Fn::If:
-          - CustomImageEmpty
-          - !Ref PSMAmi
-          - !Ref ComponentCustomAmi
+      ImageId: !Ref ComponentAmi
       InstanceType: !Ref ComponentInstanceType
       UserData:
         Fn::Base64: !Sub
@@ -499,11 +374,7 @@ Resources:
           Value: !Ref ComponentInstanceName
       SecurityGroupIds: !Ref ComponentInstanceSecurityGroups
       SubnetId: !Ref ComponentInstanceSubnetId
-      ImageId: 
-        Fn::If:
-          - CustomImageEmpty
-          - !Ref PSMPAmi
-          - !Ref ComponentCustomAmi
+      ImageId: !Ref ComponentAmi
       InstanceType: !Ref ComponentInstanceType
       UserData:
         Fn::Base64: !Sub
@@ -546,11 +417,7 @@ Resources:
           Value: !Ref ComponentInstanceName
       SecurityGroupIds: !Ref ComponentInstanceSecurityGroups
       SubnetId: !Ref ComponentInstanceSubnetId
-      ImageId: 
-        Fn::If:
-          - CustomImageEmpty
-          - !Ref PTAAmi
-          - !Ref ComponentCustomAmi
+      ImageId: !Ref ComponentAmi
       InstanceType: !Ref ComponentInstanceType
       UserData:
         Fn::Base64: !Sub
@@ -585,18 +452,6 @@ Parameters:
       - Accept
       - Decline
     Default: Decline
-  WinVersion:
-    Type: String
-    Description: Select a Windows Server version for all Windows-based components (field ignored for PSMP/PTA).
-    AllowedValues:
-      - Win2019
-      - Win2022
-    Default: Win2019
-  CyberarkAccountId:
-    Type: String
-    Description: Enter the CyberArk Account ID (AMI Owner account ID).
-    AllowedPattern: ^[\d]{12}$
-    ConstraintDescription: Account ID must contain 12 digits
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select an existing Key Pair from your AWS account.
@@ -627,10 +482,10 @@ Parameters:
       - PSMP
       - PTA
     Default: PVWA
-  ComponentCustomAmi:
+  ComponentAmi:
     Type: String
-    Description: Enter the Component Image ID, if you wish to use a custom Component image.
-    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    Description: Enter the Component Image ID.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$
     ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   ComponentInstanceName:
     Type: String
@@ -680,8 +535,6 @@ Metadata:
           default: General parameters
         Parameters:
           - EULA
-          - WinVersion
-          - CyberarkAccountId
           - KeyName
       - Label:
           default: Primary Vault and DR information
@@ -694,7 +547,7 @@ Metadata:
           default: Component configuration
         Parameters:
           - ComponentToInstall
-          - ComponentCustomAmi
+          - ComponentAmi
           - ComponentInstanceName
           - ComponentHostname
           - PVWAPrivateDNS
@@ -704,10 +557,6 @@ Metadata:
     ParameterLabels:
       EULA:
         default: License Agreement
-      WinVersion:
-        default: Windows Server Version
-      CyberarkAccountId:
-        default: CyberArk Account ID
       KeyName:
         default: Key Pair
       VaultPrivateIP:
@@ -720,8 +569,8 @@ Metadata:
         default: Vault Admin Password
       ComponentToInstall:
         default: Component To Install
-      ComponentCustomAmi:
-        default: Custom Component Image ID (Optional)
+      ComponentAmi:
+        default: Component Image ID
       ComponentInstanceName:
         default: Component Instance Name
       ComponentHostname:
@@ -750,24 +599,6 @@ Conditions:
   CreatePTACondition: !Equals
     - PTA
     - !Ref ComponentToInstall
-  CustomImageEmpty: !Equals
-    - ''
-    - !Ref ComponentCustomAmi
-  PVWACustomImageEmpty: !And
-    - !Condition CreatePVWACondition
-    - !Condition CustomImageEmpty
-  CPMCustomImageEmpty: !And
-    - !Condition CreateCPMCondition
-    - !Condition CustomImageEmpty
-  PSMCustomImageEmpty: !And
-    - !Condition CreatePSMCondition
-    - !Condition CustomImageEmpty
-  PSMPCustomImageEmpty: !And
-    - !Condition CreatePSMPCondition
-    - !Condition CustomImageEmpty
-  PTACustomImageEmpty: !And
-    - !Condition CreatePTACondition
-    - !Condition CustomImageEmpty
   DRValueEmpty: !Equals
     - ''
     - !Ref DRPrivateIP
