--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -70,10 +70,10 @@ Resources:
       lambda_role_name: !Ref 'LambdaRemovePermissionsRole'
       instance: !Ref 'VaultDRMachine'
       region: !Ref 'AWS::Region'
-  VaultBootstrapIAMPolicy:
+  LambdaRemovePermissionsPolicy:
     Type: AWS::IAM::Policy
     Properties:
-      PolicyName: VaultBootstrapIAMPolicy
+      PolicyName: LambdaRemovePermissionsPolicy
       PolicyDocument:
         Statement:
           - Effect: Allow
@@ -86,6 +86,21 @@ Resources:
               - !GetAtt LambdaRemovePermissionsRole.Arn
       Roles:
         - !Ref 'LambdaRemovePermissionsRole'
+  LambdaDenyAllPermissionsPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: LambdaDenyAllPermissionsPolicy
+      PolicyDocument:
+        Statement:
+          - Effect: Deny
+            Action:
+              - '*'
+            Resource:
+              - '*'
+      Roles:
+        - !Ref LambdaRemovePermissionsRole
+    DependsOn:
+      - RemovePermissionVault
   LambdaDeployRole:
     Type: AWS::IAM::Role
     Properties:
